--- a/FIRST.html
+++ b/FIRST.html
@@ -1,6 +1,6 @@
 
 <html lang="en">
-    <title>Something Clever</title>
+    <title>FIRST</title>
         <head>
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
         <div class="jumbotron_background">   
         <body  style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color:#99bbff;">
-              <h1 style="padding-left:30px;">Interests</h1>
+              <h1 style="padding-left:30px;">FIRST Robotics</h1>
             </div>  
              <div class="container"> 
              
