--- a/FIRST.html
+++ b/FIRST.html
@@ -95,6 +95,7 @@
                 <h2 id="overview" style="color:white;"><b>Overview</b></h2>
                 <br>
               <div class="col-sm-9">  
+                <div class="well">
                 <center>
                   <div class="embed-responsive embed-responsive-16by9 div_style">
                         <iframe class="embed-responsive-item" width = "690" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
@@ -110,7 +111,8 @@
                   challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
                    systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                     visit their website <a href="http://www.usfirst.org/">here</a></p>
-                </div>    
+                </div>  
+                </div>
             </div>
           </div>  
         </body>
