--- a/FIRST.html
+++ b/FIRST.html
@@ -88,8 +88,8 @@
               <nav class="col-sm-3" id="myScrollspy">
                 <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
                   <li><a href="#overview"><font size="6">Overview</font></a></li>
-                  <li><a href="#STEM">STEM</a></li>
-                  <li><a href="#future">Our Future</a></li>
+                  <li><a href="#STEM"><font size="6">STEM</font></a></li>
+                  <li><a href="#future"><font size="6">Our Future</font></a></li>
                 </ul>
               </nav>
                 <h2 id="overview" style="color:white;"><b>Overview</b></h2>
