--- a/FIRST.html
+++ b/FIRST.html
@@ -92,10 +92,9 @@
                   <li><a href="#future"><font size="6">Our Future</font></a></li>
                 </ul>
               </nav>
-                <h2 id="overview" style="color:white;"><b>Overview</b></h2>
-                <br>
               <div class="col-sm-9">  
                 <div class="well">
+                <h2 id="overview" style="color:black;"><b>Overview</b></h2>
                 <center>
                   <div class="embed-responsive embed-responsive-16by9 div_style">
                         <iframe class="embed-responsive-item" width = "690" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
