--- a/FIRST.html
+++ b/FIRST.html
@@ -86,15 +86,18 @@
           <div class="container">   
             <div class="row">
               <nav class="col-sm-3" id="myScrollspy">
-                <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
-                  <li><a href="#overview"><font size="6">Overview</font></a></li>
-                  <li><a href="#STEM"><font size="6">STEM</font></a></li>
-                  <li><a href="#future"><font size="6">Our Future</font></a></li>
-                </ul>
+                <center>  
+                    <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
+                      <li><a href="#overview"><font size="6">Overview</font></a></li>
+                      <li><a href="#STEM"><font size="6">STEM</font></a></li>
+                      <li><a href="#future"><font size="6">Our Future</font></a></li>
+                    </ul>
+                </center>
               </nav>
               <div class="col-sm-9">  
                 <div class="well">
                 <h2 id="overview" style="color:black;"><b>Overview</b></h2>
+                <br> 
                 <center>
                   <div class="embed-responsive embed-responsive-16by9 div_style">
                         <iframe class="embed-responsive-item" width = "690" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
