--- a/FIRST.html
+++ b/FIRST.html
@@ -67,24 +67,9 @@
                 </nav>
                 
                 
-               <!--<div class="btn-group btn-group-lg btn-group-justified">
-                    <a href="index.html" class="btn btn-primary" role="button">Home</a>-->
-                    <!--<div class="btn-group btn-group-lg">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                      Programming <span class="caret"></span></button>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="java.html">Java</a></li>
-                        <li><a href="C.html">C++/C</a></li>
-                        <li><a href="Python.html">Python</a></li>
-                        <li><a href="javascript.html">Javascript</a></li>
-                      </ul>
-                     </div>--> 
-                  <!--  <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
-                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
-                  </div>-->
              </div>
           <div class="container">   
-            <div class="row">
+            <div class="row" style="background-color: white;">
               <nav class="col-sm-3" id="myScrollspy">
                 <center>  
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
