--- a/FIRST.html
+++ b/FIRST.html
@@ -41,31 +41,31 @@
               <h1 style="padding-left:30px;">FIRST Robotics</h1>
             </div>  
           <div class="container">  
+            <nav class="navbar navbar-inverse navbar-custom">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                        
+                      </button>
+                      <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank"
+                      style="padding:5px;">
+                        <img src="images/profilepicture.jpg" class="img-responsive" width="40" height="40">
+                      </a>
+                    </div>
+                  <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="Projects.html">Projects</a></li>
+                      <li class="active"><a href="Interests.html">Interests</a></li> 
+                      <li><a href="Current_Work.html">Current Work</a></li> 
+                    </ul>
+                  </div>    
+                </div>
+            </nav>          
           
-            <div class="row" style="background-color: white;">
-                <nav class="navbar navbar-inverse navbar-custom">
-                   <div class="container-fluid">
-                        <div class="navbar-header">
-                          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>                        
-                          </button>
-                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank"
-                          style="padding:5px;">
-                            <img src="images/profilepicture.jpg" class="img-responsive" width="40" height="40">
-                          </a>
-                        </div>
-                      <div class="collapse navbar-collapse" id="myNavbar">
-                        <ul class="nav navbar-nav">
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="Projects.html">Projects</a></li>
-                          <li class="active"><a href="Interests.html">Interests</a></li> 
-                          <li><a href="Current_Work.html">Current Work</a></li> 
-                        </ul>
-                      </div>    
-                   </div>
-                </nav>
+            <div class="row" style="background-color: #ddd;">
               <nav class="col-sm-3" id="myScrollspy">
                 <center>  
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
