--- a/FIRST.html
+++ b/FIRST.html
@@ -36,7 +36,7 @@
         </style>
         
         <div class="jumbotron_background">   
-        <body  style="overflow-x:hidden;">
+        <body data-spy="scroll" data-target="#myScrollspy" data-offset="15" style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">FIRST Robotics</h1>
             </div>  
