--- a/FIRST.html
+++ b/FIRST.html
@@ -33,6 +33,9 @@
                 background-color:#000; 
                 border-style: none;
             }
+            .affix {
+                top: 20px;
+            }
         </style>
         
         <div class="jumbotron_background">   
@@ -66,15 +69,15 @@
             </nav>          
           
             <div class="row" style="background-color: #ddd;">
-                <center>
-                      <nav class="col-sm-3" id="myScrollspy">
-                            <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
-                              <li><a href="#overview"><font size="6">Overview</font></a></li>
-                              <li><a href="#STEM"><font size="6">STEM</font></a></li>
-                              <li><a href="#future"><font size="6">Our Future</font></a></li>
-                            </ul>
-                      </nav>
-                </center>
+                <nav class="col-sm-3" id="myScrollspy">
+                    <center>
+                        <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
+                          <li><a href="#overview"><font size="6">Overview</font></a></li>
+                          <li><a href="#STEM"><font size="6">STEM</font></a></li>
+                          <li><a href="#future"><font size="6">Our Future</font></a></li>
+                        </ul>
+                    </center>
+                </nav>
               <div class="col-sm-9">  
                     <div class="well">
                         <h2 id="overview" style="color:black;"><b>Overview</b></h2>
