--- a/FIRST.html
+++ b/FIRST.html
@@ -15,6 +15,10 @@
 
         </head>
         <style>
+            body {
+                position: relative;
+            }
+        
             @media all and ( min-width: 690px) {
                 .div_style { 
                     width:690px;
