--- a/FIRST.html
+++ b/FIRST.html
@@ -44,7 +44,7 @@
         
         <div class="jumbotron_background">   
         <body data-spy="scroll" data-target="#myScrollspy" data-offset="15" style="overflow-x:hidden;">
-            <div class="jumbotron" style="background-color:#99bbff; margin-bottom=0;">
+            <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0;">
               <h1 style="padding-left:30px;">FIRST Robotics</h1>
             </div>  
             
