--- a/FIRST.html
+++ b/FIRST.html
@@ -43,7 +43,7 @@
         </style>
         
         <div class="jumbotron_background">   
-        <body data-spy="scroll" data-target="#myScrollspy" data-offset="15" style="overflow-x:hidden;">
+        <body data-spy="scroll" data-target="#myScrollspy" data-offset="15">
             <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0;">
               <h1 style="padding-left:30px;">FIRST Robotics</h1>
             </div>  
