--- a/FIRST.html
+++ b/FIRST.html
@@ -83,7 +83,7 @@
                     </ul>
                 </nav>
               <div class="col-sm-9">  
-                    <div id="overview">
+                    <div class="well" id="overview">
                         <h2 style="color:black;"><b>Overview</b></h2>
                         <br> 
                         <center>
@@ -102,7 +102,7 @@
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
                     </div>  
-                    <div  id="STEM">
+                    <div class="well" id="STEM">
                         <h2 style="color:black;"><b>Promoting STEM</b></h2>
                         <br> 
                         <center>
@@ -119,7 +119,7 @@
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
                     </div>  
                     
-                    <div id="future">
+                    <div class="well" id="future">
                         <h2 style="color:black;"><b>Our Future</b></h2>
                         <br> 
                         <center>
