--- a/FIRST.html
+++ b/FIRST.html
@@ -76,7 +76,7 @@
             <div class="row" style="background-color: #ddd;">
                 
                 <nav class="col-sm-3" id="myScrollspy">
-                    <ul class="nav nav-pills nav-stacked" data-spy="scrollspy" data-offset-top="205">
+                    <ul class="nav nav-pills nav-stacked" data-spy="scroll" data-offset-top="205">
                       <li><a href="#overview"><font size="6">Overview</font></a></li>
                       <li><a href="#STEM"><font size="6">STEM</font></a></li>
                       <li><a href="#future"><font size="6">Our Future</font></a></li>
