--- a/FIRST.html
+++ b/FIRST.html
@@ -2,16 +2,11 @@
 <html lang="en">
     <title>FIRST</title>
         <head>
-          <meta charset="utf-8">
-          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
-
-          <!-- Bootstrap -->
-          <link href="css/bootstrap.min.css" rel="stylesheet">
-          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-          <!-- Include all compiled plugins (below), or include individual files as needed -->
-          <script src="js/bootstrap.min.js"></script>
+          <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
         </head>
         <style>
