--- a/FIRST.html
+++ b/FIRST.html
@@ -96,8 +96,8 @@
                           challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
-                    </div>  
-                    <div class="well" id="STEM">
+
+                    <div id="STEM">
                         <h2 style="color:black;"><b>Promoting STEM</b></h2>
                         <br> 
                         <center>
@@ -114,7 +114,7 @@
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
                     </div>  
                     
-                    <div class="well" id="future">
+                    <div id="future">
                         <h2 style="color:black;"><b>Our Future</b></h2>
                         <br> 
                         <center>
@@ -129,7 +129,8 @@
                           challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
-                    </div>  
+                    </div>
+                  </div>
                 </div>
             </div>
           </div>  
