--- a/FIRST.html
+++ b/FIRST.html
@@ -72,9 +72,11 @@
                 
                 <nav class="col-sm-3" id="myScrollspy">
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
-                      <li><a href="#overview"><font size="5">Overview</font></a></li>
-                      <li><a href="#STEM"><font size="5">STEM</font></a></li>
-                      <li><a href="#future"><font size="5">Our Future</font></a></li>
+                      <center>
+                      <li><a href="#overview"><font size="5"><b>Overview</b></font></a></li>
+                      <li><a href="#STEM"><font size="5"><b>STEM</b></font></a></li>
+                      <li><a href="#future"><font size="5"><b>Our Future</b></font></a></li>
+                      </center>
                     </ul>
                 </nav>
               <div class="col-sm-9">  
