--- a/FIRST.html
+++ b/FIRST.html
@@ -72,9 +72,9 @@
                 <center>
                 <nav class="col-sm-3" id="myScrollspy">
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
-                      <li><a href="#overview"><font size="5"><b>Overview</b></font></a></li>
-                      <li><a href="#STEM"><font size="5"><b>STEM</b></font></a></li>
-                      <li><a href="#future"><font size="5"><b>Our Future</b></font></a></li>
+                      <li><a href="#overview"><font size="5">Overview</font></a></li>
+                      <li><a href="#STEM"><font size="5">STEM</font></a></li>
+                      <li><a href="#future"><font size="5">Our Future</font></a></li>
                     </ul>
                 </nav>
                 </center>
@@ -83,8 +83,8 @@
                         <h2 style="color:black;"><b>Overview</b></h2>
                         <br> 
                         <center>
-                          <div class="embed-responsive embed-responsive-16by9 div_style">
-                                <iframe class="embed-responsive-item" width = "600" height = "415" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                          <div class="embed-responsive embed-responsive-16by9 div_style" style="width:400px;">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                                  frameborder="0" allowfullscreen ></iframe>
                           </div> 
                         </center>
@@ -98,7 +98,7 @@
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
     
-                    <hr>
+                    <hr> <hr> <hr>
                     <div id="STEM">
                         <h2 style="color:black;"><b>Promoting STEM</b></h2>
                         <br> 
