--- a/FIRST.html
+++ b/FIRST.html
@@ -98,7 +98,7 @@
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
     
-                    <hr> <hr> <hr>
+                    <hr style="color:black;"> 
                     <div id="STEM">
                         <h2 style="color:black;"><b>Promoting STEM</b></h2>
                         <br> 
