--- a/FIRST.html
+++ b/FIRST.html
@@ -83,7 +83,7 @@
                         <h2 style="color:black;"><b>Overview</b></h2>
                         <br> 
                         <center>
-                          <div class="embed-responsive embed-responsive-16by9 div_style" style="width:400px;">
+                          <div class="embed-responsive embed-responsive-16by9 div_style" style="width:100%;">
                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                                  frameborder="0" allowfullscreen ></iframe>
                           </div> 
