--- a/FIRST.html
+++ b/FIRST.html
@@ -69,7 +69,7 @@
             <br>
           <div class="container">  
             <div class="row" style="background-color: #ddd;">
-                <center>
+
                 <nav class="col-sm-3" id="myScrollspy">
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
                       <li><a href="#overview"><font size="5">Overview</font></a></li>
@@ -77,7 +77,6 @@
                       <li><a href="#future"><font size="5">Our Future</font></a></li>
                     </ul>
                 </nav>
-                </center>
               <div class="col-sm-9">  
                     <div class="well" id="overview">
                         <h2 style="color:black;"><b>Overview</b></h2>
@@ -98,7 +97,7 @@
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
     
-                    <hr style="color:black;"> 
+                    <hr style="background-color:black; height:2px;"> 
                     <div id="STEM">
                         <h2 style="color:black;"><b>Promoting STEM</b></h2>
                         <br> 
@@ -116,7 +115,7 @@
                             visit their website <a href="http://www.usfirst.org/">here</a></p>
                     </div>  
                     
-                    <hr>
+                    <hr style="background-color:black; height:2px;">
                     <div id="future">
                         <h2 style="color:black;"><b>Our Future</b></h2>
                         <br> 
