--- a/FIRST.html
+++ b/FIRST.html
@@ -72,9 +72,9 @@
 
                 <nav class="col-sm-3" id="myScrollspy">
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
-                      <li style="color:black;"><a href="#overview"><font size="5">Overview</font></a></li>
-                      <li style="color:black;"><a href="#STEM"><font size="5">STEM</font></a></li>
-                      <li style="color:black;"><a href="#future"><font size="5">Our Future</font></a></li>
+                      <li style="background-color:black;"><a href="#overview"><font size="5">Overview</font></a></li>
+                      <li style="background-color:black;"><a href="#STEM"><font size="5">STEM</font></a></li>
+                      <li style="background-color:black;"><a href="#future"><font size="5">Our Future</font></a></li>
                     </ul>
                 </nav>
               <div class="col-sm-9">  
