--- a/FIRST.html
+++ b/FIRST.html
@@ -105,14 +105,12 @@
                             
                         </center>
                         <br>      
-                         <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
-                          one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
-                          heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
-                           pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
-                          shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
-                          challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
-                           systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
-                            visit their website <a href="http://www.usfirst.org/">here</a></p>
+                         <p style="line-height: 1.8;">Above is picture of my friends and I with U.S. Representative Niki Tsongas.
+                         We met with her to talk about spreading STEM throughout the community. STEM stands for Science Technology
+                         Engineering and Mathemtics and these fields of study are severly lacking in our public school system.
+                         FIRST is all about promoting STEM throughout the world and as a member of FIRST it is also my responsiblity.
+                         Teaching the youth about these fields will be immensly important in the future since there are more jobs
+                         opening in those fields every day and fewer people to take them. </p>
                     </div>  
                     
                     <hr style="background-color:black; height:2px;">
