--- a/FIRST.html
+++ b/FIRST.html
@@ -71,7 +71,9 @@
             <div class="row" style="background-color: #ddd;">
 
                 <nav class="col-sm-3" id="myScrollspy">
-                    <img src="images/firstlogo.png" class="img-responsive" width="100" height="100">
+                    <center>
+                        <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
+                    </center>
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
                       <li><a href="#overview"><font size="5">Overview</font></a></li>
                       <li><a href="#STEM"><font size="5">STEM</font></a></li>
