--- a/FIRST.html
+++ b/FIRST.html
@@ -72,8 +72,11 @@
 
                 <nav class="col-sm-3" id="myScrollspy">
                     <center>
-                        <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
+                        <a href="http://www.firstinspires.org/" target="_blank" style="padding:5px;">
+                            <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
+                        </a>
                     </center>
+                    <hr style="background-color:black; height:2px;"> 
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
                       <li><a href="#overview"><font size="5">Overview</font></a></li>
                       <li><a href="#STEM"><font size="5">STEM</font></a></li>
@@ -98,7 +101,7 @@
                           shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
                           challenges every year and it is because of FIRST that I got my extensive background in programming, embedded 
                            systems, sensors, electronics, and overall love for engineering. If you want to learn more about FIRST
-                            visit their website <a href="http://www.usfirst.org/">here</a></p>
+                            visit their website by clicking on the FIRST Logo in the left column.</p>
     
                     <hr style="background-color:black; height:2px;"> 
                     <div id="STEM">
