--- a/FIRST.html
+++ b/FIRST.html
@@ -71,17 +71,19 @@
             <div class="row" style="background-color: #ddd;">
 
                 <nav class="col-sm-3" id="myScrollspy">
-                    <center>
-                        <a href="http://www.firstinspires.org/" target="_blank" style="padding:5px;">
-                            <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
-                        </a>
-                    </center>
+                    
                     <hr style="background-color:black; height:2px;"> 
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
                       <li><a href="#overview"><font size="5">Overview</font></a></li>
                       <li><a href="#STEM"><font size="5">STEM</font></a></li>
                       <li><a href="#future"><font size="5">Our Future</font></a></li>
                     </ul>
+                    
+                    <center>
+                        <a href="http://www.firstinspires.org/" target="_blank" >
+                            <img src="images/firstlogo.png" class="img-responsive" data-spy="affix-bottom" width="200" height="200">
+                        </a>
+                    </center>
                 </nav>
               <div class="col-sm-9">  
                     <div class="well" id="overview">
