--- a/FIRST.html
+++ b/FIRST.html
@@ -81,7 +81,7 @@
                     
                     <center>
                         <a href="http://www.firstinspires.org/" target="_blank" >
-                            <img src="images/firstlogo.png" class="img-responsive" data-spy="affix-bottom" width="200" height="200">
+                            <img src="images/firstlogo.png" class="img-responsive" data-spy="affix" width="200" height="200">
                         </a>
                     </center>
                 </nav>
