--- a/FIRST.html
+++ b/FIRST.html
@@ -73,11 +73,11 @@
                 <nav class="col-sm-3" id="myScrollspy">
                     <center>
                         <a href="http://www.firstinspires.org/" target="_blank" >
-                            <img src="images/firstlogo.png" class="img-responsive" data-spy="affix" data-offset-top="255"
+                            <img src="images/firstlogo.png" class="img-responsive"
                             width="200" height="200">
                         </a>
                     </center>
-                    <hr style="background-color:black; height:2px;" data-spy="affix" data-offset-top="255"> 
+                    <hr style="background-color:black; height:2px;"> 
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="455">
                       <li><a href="#overview"><font size="5">Overview</font></a></li>
                       <li><a href="#STEM"><font size="5">STEM</font></a></li>
