--- a/FIRST.html
+++ b/FIRST.html
@@ -73,12 +73,11 @@
                 <nav class="col-sm-3" id="myScrollspy">
                     <center>
                         <a href="http://www.firstinspires.org/" target="_blank" >
-                            <img src="images/firstlogo.png" class="img-responsive"
-                            width="200" height="200">
+                            <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
                         </a>
                     </center>
                     <hr style="background-color:black; height:2px;"> 
-                    <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="455">
+                    <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
                       <li><a href="#overview"><font size="5">Overview</font></a></li>
                       <li><a href="#STEM"><font size="5">STEM</font></a></li>
                       <li><a href="#future"><font size="5">Our Future</font></a></li>
@@ -126,10 +125,14 @@
                         <h2 style="color:black;"><b>Our Future</b></h2>
                         <br> 
                         <center>
-                            
+                            <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
                         </center>
                         <br>      
-                         <p style="line-height: 1.8;"></p>
+                         <p style="line-height: 1.8;">The above pictures show me teaching high school students java.
+                         We used java to operate our robot so it was crucial to teach it to those who wanted to learn how
+                         to operate the robot. In addition to teaching the students during the season I also created a 
+                         summer programming class that taught them java in more depth. You can read more about that in Porjects
+                         tab under Space Invaders.</p>
                     </div>
                   </div>
                 </div>
