--- a/FIRST.html
+++ b/FIRST.html
@@ -85,7 +85,7 @@
                     
                 </nav>
               <div class="col-sm-9">  
-                    <div class="well" id="overview">
+                    <div class="well">
                         <h2 style="color:black;"><b>Overview</b></h2>
                         <br> 
                         <center>
@@ -95,7 +95,7 @@
                           </div> 
                         </center>
                         <br>      
-                         <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
+                         <p style="line-height: 1.8;"  id="overview">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
                           one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
                           heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
                            pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
