--- a/FIRST.html
+++ b/FIRST.html
@@ -125,7 +125,7 @@
                         <h2 style="color:black;"><b>Our Future</b></h2>
                         <br> 
                         <center>
-                            <img src="images/firstlogo.png" class="img-responsive" width="200" height="200">
+                            <img src="images/teaching.png" class="img-responsive" width="500" height="500">
                         </center>
                         <br>      
                          <p style="line-height: 1.8;">The above pictures show me teaching high school students java.
