--- a/FIRST.html
+++ b/FIRST.html
@@ -128,11 +128,23 @@
                             <img src="images/teaching.png" class="img-responsive" width="500" height="500">
                         </center>
                         <br>      
-                         <p style="line-height: 1.8;">The above pictures show me teaching high school students java.
+                         <p style="line-height: 1.8;">The above pictures shows me teaching high school students java.
                          We used java to operate our robot so it was crucial to teach it to those who wanted to learn how
                          to operate the robot. In addition to teaching the students during the season I also created a 
                          summer programming class that taught them java in more depth. You can read more about that in Porjects
                          tab under Space Invaders.</p>
+                         <br> 
+                         <center>
+                            <img src="images/students.jpg" class="img-responsive" width="500" height="500">
+                         </center>
+                         <br> 
+                         <p style="line-height: 1.8;">The above pictures shows me with two middle school students. They were part
+                         of FLL (FIRST Lego League) which is similar to FRC except instead of giant one hundred pound robots
+                         these robots were made out of legos. The middle school students had to use Lego Mindstorm kits to construct
+                         a Lego robots to complete challenges that were controlled completely autonomously. I was a mentor helping
+                         these kids learn how to program and build the robot and enstilling in them the fundamentals of engineering.
+                         We didn't do great in the competitions but we had a lot of fun and everyone learned a lot including myself.
+                         </p>
                     </div>
                   </div>
                 </div>
