--- a/FIRST.html
+++ b/FIRST.html
@@ -105,8 +105,8 @@
                             visit their website by clicking on the FIRST Logo in the left column.</p>
     
                     <hr style="background-color:black; height:2px;"> 
-                    <div id="robots">
-                        <h2 style="color:black;"><b>Robots</b></h2>
+                    <div >
+                        <h2 id="robots" style="color:black;"><b>Robots</b></h2>
                         <br> 
                         <p>Below are pictures of the robots I have worked on over the past four years. </p>
                         <center>
