--- a/FIRST.html
+++ b/FIRST.html
@@ -110,18 +110,26 @@
                         <br> 
                         <p>Below are pictures of the robots I have worked on over the past four years. </p>
                         <center>
-                            <img src="images/tuberobot.JPG" class="img-responsive" width="100%" height="500">
+                            <img src="images/tuberobot.JPG" class="img-responsive" width="400" height="500">
+                            <br>
                             <p> <font color="grey">This was our robot in 2011 that picked up tubes and had a minibot
                             onboard.</font></p>
-                            <img src="images/basketballrobot.JPG" class="img-responsive" width="100%" height="500">
+                            <br>
+                            <img src="images/basketballrobot.JPG" class="img-responsive" width="400" height="500">
+                            <br>
                             <p> <font color="grey">This was our robot in 2012 that shot foam basketballs and balanaced
                             itself on a bridge.</font></p>
-                            <img src="images/frisbeerobot.JPG" class="img-responsive" width="100%" height="500">
+                            <br>
+                            <img src="images/frisbeerobot.JPG" class="img-responsive" width="400" height="500">
+                            <br>
                             <p> <font color="grey">This was our robot in 2013 it shot frisbees and climbed a ten
                             foot tall pyramid (see video above).</font></p>
-                            <img src="images/yogarobot.JPG" class="img-responsive" width="100%" height="500">
+                            <br>
+                            <img src="images/yogarobot.JPG" class="img-responsive" width="400" height="500">
+                            <br>
                             <p> <font color="grey">This was our robot in 2014 and it picked up giant yoga balls and
                             shot them into goals.</font></p>
+                            <br>
                         </center>
                         <br>      
                          <!--<p style="line-height: 1.8;">Above is picture of my friends and I with U.S. Representative Niki Tsongas.
