--- a/FIRST.html
+++ b/FIRST.html
@@ -60,8 +60,9 @@
                     <ul class="nav navbar-nav">
                       <li><a href="index.html">Home</a></li>
                       <li><a href="Projects.html">Projects</a></li>
-                      <li class="active"><a href="Interests.html">Interests</a></li> 
+                      <li><a href="Interests.html">Interests</a></li> 
                       <li><a href="Current_Work.html">Current Work</a></li> 
+                      <li class="active"><a href="FIRST.html">FIRST</a></li> 
                     </ul>
                   </div>    
                 </div>
