--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                           <li><a href="Projects.html">Projects</a></li>
                           <li><a href="Interests.html">Interests</a></li> 
                           <li><a href="Current_Work.html">Current Work</a></li> 
+                          <li><a href="FIRST.html">FIRST</a></li> 
                         </ul>
                       </div>    
                    </div>
