--- a/Projects.html
+++ b/Projects.html
@@ -53,6 +53,7 @@
                           <li class="active"><a href="Projects.html">Projects</a></li>
                           <li><a href="Interests.html">Interests</a></li> 
                           <li><a href="Current_Work.html">Current Work</a></li> 
+                          <li><a href="FIRST.html">FIRST</a></li> 
                         </ul>
                       </div>    
                    </div>
