--- a/Interests.html
+++ b/Interests.html
@@ -61,6 +61,7 @@
                           <li><a href="Projects.html">Projects</a></li>
                           <li class="active"><a href="Interests.html">Interests</a></li> 
                           <li><a href="Current_Work.html">Current Work</a></li> 
+                          <li><a href="FIRST.html">FIRST</a></li> 
                         </ul>
                       </div>    
                    </div>
