--- a/Current_Work.html
+++ b/Current_Work.html
@@ -54,6 +54,7 @@
                           <li><a href="Projects.html">Projects</a></li>
                           <li><a href="Interests.html">Interests</a></li> 
                           <li class="active"><a href="Current_Work.html">Current Work</a></li> 
+                          <li><a href="FIRST.html">FIRST</a></li> 
                         </ul>
                       </div>    
                    </div>
