--- a/FIRST.html
+++ b/FIRST.html
@@ -33,6 +33,7 @@
                 border-style: none;
             }
             .affix {
+                width:17.5%;
                 top: 20px;
             }
         </style>
