--- a/Interests.html
+++ b/Interests.html
@@ -88,7 +88,8 @@
               
             <div class="well">
               <h2><b>Music</b></h2>
-               <img src="images/trumpetpicmicca.JPG" class="img-responsive" width = "600" height = "600">
+               <img src="images/trumpetpicmicca.JPG" class="img-responsive" width = "600" height = "600" align="left" 
+               style="padding-left:20px;">
                <br>
                <p style="line-height: 1.8;"> I have been playing the trumpet for over a decade and have been involved in many musical groups. I went to Clinton High
                School and was part of the Clinton High School band for four years. During that time I also took trumpet lessons
