--- a/Interests.html
+++ b/Interests.html
@@ -88,7 +88,7 @@
               
             <div class="well">
               <h2><b>Music</b></h2>
-               <img src="images/trumpetpicmicca.JPG" class="img-responsive" width = "600" height = "600" align="left" 
+               <img src="images/trumpetpicmicca.JPG" class="img-responsive" width = "250" align="left" 
                style="padding-right:20px;">
                <br>
                <p style="line-height: 1.8;"> I have been playing the trumpet for over a decade and have been involved in many musical groups. I went to Clinton High
@@ -119,9 +119,10 @@
                one below is a lot cooler than some simple text on a screen</p>
                <br>
                <center>
-                <img src="images/teapots.jpg" class="img-responsive" width = "600" height = "600">
+                <img src="images/teapots.jpg" class="img-responsive" width = "300" align="right" 
+                style="padding-left:20px;">
                 <br><br>
-                <p> <font color="grey"> These teapots were rendered using a shader I made in Sunflow </font></p>
+                <p align="right"> <font color="grey"> These teapots were rendered using a shader I made in Sunflow </font></p>
                </center>    
             </div>
           </div>
