--- a/Current_Work.html
+++ b/Current_Work.html
@@ -1,5 +1,5 @@
 <html lang="en">
-    <title>Something Clever</title>
+    <title>Current Work</title>
         <head>
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
