--- a/Current_Work.html
+++ b/Current_Work.html
@@ -31,10 +31,10 @@
         
         <div class="jumbotron_background"> 
         <body  style="overflow-x:hidden;">
-            <div class="jumbotron" style="background-color:#99bbff;">
+            <div class="jumbotron" style="background-color:#99bbff; margin-bottom:0;">
               <h1 style="padding-left:30px;">Current Work</h1>
             </div>  
-             <div class="container">
+             <!--<div class="container">-->
                  <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
                        <div class="navbar-header">
@@ -73,8 +73,8 @@
                      </div>--> 
                 <!--    <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
-                  </div>-->
-             </div>
+                  </div>
+             </div>-->
           <div class="container">   
             <div class="well">
               <h2><b>MatthewLydigsen.com</b></h2>
