--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         <div class="jumbotron_background">   
         <body  style="overflow-x:hidden;">
-            <div class="jumbotron" style="background-color: #99bbff;">
+            <div class="jumbotron" style="background-color: #99bbff; margin-bottom:0;">
                <!-- <div class="row">
                     <div class="col-sm-10">-->
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
@@ -45,7 +45,7 @@
             </div>  
 
 
-             <div class="container">
+             <!--<div class="container">-->
                 <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
                         <div class="navbar-header">
@@ -85,7 +85,7 @@
                         <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
                         <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                  </div>-->
-              
+              <br>
                 <div class="well">
                   <h2><b>About me</b></h2>
                   <center>
@@ -112,7 +112,7 @@
                    Feel free to send me an email at mlydigsen@umass.edu.
                    </p>
                 </div>
-             </div>
+             <!--</div>-->
         </body>
         <footer>
          <div class="footer" style="background-color:#336699;">
