--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                         <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                  </div>-->
               <br>
+              <div class="container">
                 <div class="well">
                   <h2><b>About me</b></h2>
                   <center>
@@ -112,7 +113,7 @@
                    Feel free to send me an email at mlydigsen@umass.edu.
                    </p>
                 </div>
-             <!--</div>-->
+             </div>
         </body>
         <footer>
          <div class="footer" style="background-color:#336699;">
