--- a/Interests.html
+++ b/Interests.html
@@ -88,7 +88,7 @@
              <br>
           <div class="container">   
               
-            <div class="well">
+            <!--<div class="well">
               <h2><b>Music</b></h2>
                <img src="images/trumpetpicmicca.JPG" class="img-responsive" width = "250" align="left" 
                style="padding-right:20px;">
@@ -109,7 +109,7 @@
                <p style="line-height: 1.8;">Aside from playing music I enjoy listening to all sorts of types of music from rap, rock, pop, rnb, and dubstep.
                To be honest the only type of music I don't listen to is country (sorry to everyone who loves country I just
                don't enjoy it). </p>
-            </div>
+            </div>-->
             <div class="well">
               <h2><b>Graphics, Vision, and Robotics</b></h2>
                
