--- a/music.html
+++ b/music.html
@@ -67,7 +67,7 @@
                       <li><a href="Interests.html">Interests</a></li> 
                       <li><a href="Current_Work.html">Current Work</a></li> 
                       <li><a href="FIRST.html">FIRST</a></li> 
-                      <li class="active"><a href="FIRST.html">Music</a></li> 
+                      <li class="active"><a href="music.html">Music</a></li> 
                     </ul>
                   </div>    
                 </div>
@@ -105,8 +105,7 @@
                     <div >
                         <h2 id="school" style="color:black;"><b>High School</b></h2>
                         <br> 
-                        <p>Below are pictures of the robots I have worked on over the past four years. </p>
-                      
+                            <img src="images/highschool.jpg" class="img-responsive" width = "400" ">
                         <br>      
                          <p style="line-height: 1.8;">When I joined High School I joined the Clinton High School Band and we played
                          at the football games, marched at local parades, and had concerts in the spring and fall. I continued with
@@ -116,7 +115,7 @@
                     
                     <hr style="background-color:black; height:2px;">
                     <div id="UMMB">
-                        <h2 style="color:black;"><b>UMMB</b></h2>
+                        <h2 style="color:black;"><b>University of Massachusetts Minuteman Band</b></h2>
                         <br> 
                         <center>
                           <div class="embed-responsive embed-responsive-16by9 div_style" style="width:100%;">
