--- a/music.html
+++ b/music.html
@@ -80,7 +80,7 @@
                     <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="255">
                         <center>
                             <a href="http://www.umass.edu/band/" target="_blank" >
-                                <img src="images/ummb.jpg" class="img-responsive img-circle" width="200" style="padding-top:20px;">
+                                <img src="images/ummb.jpg" class="img-responsive img-rounded" width="200" style="padding-top:20px;">
                             </a>
                         </center>
                         <hr style="background-color:black; height:2px;"> 
