--- a/music.html
+++ b/music.html
@@ -105,7 +105,9 @@
                     <div >
                         <h2 id="school" style="color:black;"><b>High School</b></h2>
                         <br> 
-                            <img src="images/highschool.jpg" class="img-responsive" width = "400" ">
+                            <center>
+                                <img src="images/highschool.jpg" class="img-responsive" width = "500" ">
+                            </center>    
                         <br>      
                          <p style="line-height: 1.8;">When I joined High School I joined the Clinton High School Band and we played
                          at the football games, marched at local parades, and had concerts in the spring and fall. I continued with
