--- a/music.html
+++ b/music.html
@@ -113,6 +113,12 @@
                          at the football games, marched at local parades, and had concerts in the spring and fall. I continued with
                          my lessons with Mark Bacon and I truly started to excel. I quickly became first trumpet in my band and
                          continued to audition for Central districts throughout High School making it again my Senior year.</p>
+                        <br>    
+                        <center>
+                            <a href="http://weddingtrumpeter.com/" target="_blank" >
+                                <img src="images/markbacon.jpg" class="img-responsive" width="500">
+                            </a>
+                        </center>                       
                     </div>  
                     
                     <hr style="background-color:black; height:2px;">
