--- a/music.html
+++ b/music.html
@@ -118,6 +118,8 @@
                             <a href="http://weddingtrumpeter.com/" target="_blank" >
                                 <img src="images/markbacon.jpg" class="img-responsive" width="500">
                             </a>
+                            <br>
+                             <p> <font color="grey">This is Mark Bacon. Click on the image to check out his site.</font></p>
                         </center>                       
                     </div>  
                     
