--- a/music.html
+++ b/music.html
@@ -94,12 +94,17 @@
                     <div class="well">
                         <h2 style="color:black;" id="start"><b>My Start</b></h2>
                         <br> 
+                            <center>
+                                <img src="images/districts.jpg" class="img-responsive" width = "300" >
+                            </center>    
+                        <br>  
                          <p style="line-height: 1.8;">I joined the band at the Clinton Middle School over a decade ago. I didn't
                          know what instrument I wanted to play so I chose one I thought I would like and that is how I started 
                          playing the trumpet. I spent much time playing the trumpet and loved every second of it. When I started
                          seventh grade I tried out for the Central District Music Festival. Kids from all over the district would
                          come and audition for a chance to show they were the best of the best. I auditioned and I didn't make it.
-                         But the next year I started taking lessons with a great mentor of mine Mark Bacon and I made it. </p>
+                         But the next year I started taking lessons with a great mentor of mine Mark Bacon and I made it. The above
+                         picture is actually of me in High School but I am wearing my marching shirt from middle school.</p>
     
                     <hr style="background-color:black; height:2px;"> 
                     <div >
@@ -112,7 +117,9 @@
                          <p style="line-height: 1.8;">When I joined High School I joined the Clinton High School Band and we played
                          at the football games, marched at local parades, and had concerts in the spring and fall. I continued with
                          my lessons with Mark Bacon and I truly started to excel. I quickly became first trumpet in my band and
-                         continued to audition for Central districts throughout High School making it again my Senior year.</p>
+                         continued to audition for Central districts throughout High School making it again my Senior year. Being
+                         able to go to a university that had a great marching band was a big factor in my decision to go to 
+                         UMass Amherst.</p>
                         <br>    
                         <center>
                             <a href="http://weddingtrumpeter.com/" target="_blank" >
